--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   </head>
 
   <body>
-    <!-- Use D3 v6 -->
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <!-- Use D3 v3 -->
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script>
       // Load JSON dynamically from the same directory
-      d3.json("graph.json").then(function(graph) {
+      d3.json("graph.json").then(function (graph) {
         initializeGraph(graph);
       }).catch(error => console.log("Error loading graph data:", error));
 
@@ -29,12 +29,17 @@
         var w = window.innerWidth;
         var h = window.innerHeight;
 
-        var minScore = Math.min(...graph.nodes.map(n => n.modularity));
-        var maxScore = Math.max(...graph.nodes.map(n => n.modularity));
+        // Determine min/max values for scaling
+        var minCited = d3.min(graph.nodes, d => d.cited_by || 1);
+        var maxCited = d3.max(graph.nodes, d => d.cited_by || 1);
 
-        var color = d3.scaleLinear()
-          .domain([minScore, maxScore]) // Corrected scale usage
-          .range(["lime", "deepskyblue"]);
+        // Scale for node sizes (based on citations or default size)
+        var nodeSize = d3.scaleLinear()
+          .domain([minCited, maxCited])
+          .range([10, 35]); // Nodes are now bigger
+
+        // Color scale using D3's categorical colors
+        var color = d3.scaleOrdinal(d3.schemeCategory10);
 
         // Create SVG container with responsive design
         var svg = d3.select("body").append("svg")
@@ -44,46 +49,49 @@
           .attr("preserveAspectRatio", "xMidYMid meet");
 
         var simulation = d3.forceSimulation(graph.nodes)
-          .force("link", d3.forceLink(graph.links).id(d => d.id).distance(100))
-          .force("charge", d3.forceManyBody().strength(-200))
+          .force("link", d3.forceLink(graph.links).id(d => d.id).distance(150)) // Spread links
+          .force("charge", d3.forceManyBody().strength(-300)) // Increase repulsion
           .force("center", d3.forceCenter(w / 2, h / 2));
 
+        // Draw links
         var link = svg.selectAll(".link")
           .data(graph.links)
           .enter().append("line")
           .attr("class", "link")
           .style("stroke", "#888")
-          .style("stroke-width", 1.5);
+          .style("stroke-width", 2);
 
+        // Draw nodes
         var node = svg.selectAll(".node")
           .data(graph.nodes)
           .enter().append("circle")
-          .attr("r", 8)
-          .attr("fill", d => color(d.modularity || 0))
+          .attr("r", d => nodeSize(d.cited_by || 1)) // Dynamically scale node size
+          .attr("fill", d => color(d.id)) // Assign unique color
           .call(d3.drag()
             .on("start", dragstarted)
             .on("drag", dragged)
             .on("end", dragended));
 
+        // Add text labels
         var text = svg.selectAll(".text")
           .data(graph.nodes)
           .enter().append("text")
           .attr("dx", 12)
           .attr("dy", ".35em")
-          .style("font-size", "10px")
+          .style("font-size", "12px")
           .text(d => d.label);
 
-        simulation.on("tick", function() {
+        simulation.on("tick", function () {
           link.attr("x1", d => d.source.x)
-              .attr("y1", d => d.source.y)
-              .attr("x2", d => d.target.x)
-              .attr("y2", d => d.target.y);
+            .attr("y1", d => d.source.y)
+            .attr("x2", d => d.target.x)
+            .attr("y2", d => d.target.y);
 
           node.attr("cx", d => d.x)
-              .attr("cy", d => d.y);
+            .attr("cy", d => d.y);
 
           text.attr("x", d => d.x)
-              .attr("y", d => d.y);
+            .attr("y", d => d.y);
         });
 
         function dragstarted(event, d) {
