--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
   </head>
 
   <body>
-    <!-- Use D3 v3 -->
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script>
-      // Load JSON dynamically from the same directory
       d3.json("graph.json").then(function (graph) {
         initializeGraph(graph);
       }).catch(error => console.log("Error loading graph data:", error));
@@ -29,19 +27,15 @@
         var w = window.innerWidth;
         var h = window.innerHeight;
 
-        // Determine min/max values for scaling
         var minCited = d3.min(graph.nodes, d => d.cited_by || 1);
         var maxCited = d3.max(graph.nodes, d => d.cited_by || 1);
 
-        // Scale for node sizes (based on citations or default size)
         var nodeSize = d3.scaleLinear()
           .domain([minCited, maxCited])
-          .range([10, 35]); // Nodes are now bigger
+          .range([15, 40]); // Bigger node sizes
 
-        // Color scale using D3's categorical colors
         var color = d3.scaleOrdinal(d3.schemeCategory10);
 
-        // Create SVG container with responsive design
         var svg = d3.select("body").append("svg")
           .attr("width", w)
           .attr("height", h)
@@ -49,11 +43,10 @@
           .attr("preserveAspectRatio", "xMidYMid meet");
 
         var simulation = d3.forceSimulation(graph.nodes)
-          .force("link", d3.forceLink(graph.links).id(d => d.id).distance(150)) // Spread links
-          .force("charge", d3.forceManyBody().strength(-300)) // Increase repulsion
+          .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200)) // Increase spacing
+          .force("charge", d3.forceManyBody().strength(-600)) // Stronger repulsion
           .force("center", d3.forceCenter(w / 2, h / 2));
 
-        // Draw links
         var link = svg.selectAll(".link")
           .data(graph.links)
           .enter().append("line")
@@ -61,25 +54,24 @@
           .style("stroke", "#888")
           .style("stroke-width", 2);
 
-        // Draw nodes
         var node = svg.selectAll(".node")
           .data(graph.nodes)
           .enter().append("circle")
-          .attr("r", d => nodeSize(d.cited_by || 1)) // Dynamically scale node size
-          .attr("fill", d => color(d.id)) // Assign unique color
+          .attr("r", d => nodeSize(d.cited_by || 1)) // Larger nodes
+          .attr("fill", d => color(d.id))
           .call(d3.drag()
             .on("start", dragstarted)
             .on("drag", dragged)
             .on("end", dragended));
 
-        // Add text labels
         var text = svg.selectAll(".text")
           .data(graph.nodes)
           .enter().append("text")
-          .attr("dx", 12)
+          .attr("dx", d => nodeSize(d.cited_by || 1) + 8) // Move text further from nodes
           .attr("dy", ".35em")
           .style("font-size", "12px")
-          .text(d => d.label);
+          .text(d => d.label)
+          .style("fill", "#333");
 
         simulation.on("tick", function () {
           link.attr("x1", d => d.source.x)
