--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   </head>
 
   <body>
+    <!-- Use D3 v6 -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
-      d3.json("graph.json").then(function (graph) {
+      // Load JSON dynamically from the same directory
+      d3.json("graph.json").then(function(graph) {
         initializeGraph(graph);
       }).catch(error => console.log("Error loading graph data:", error));
 
@@ -27,15 +29,14 @@
         var w = window.innerWidth;
         var h = window.innerHeight;
 
-        var minCited = d3.min(graph.nodes, d => d.cited_by || 1);
-        var maxCited = d3.max(graph.nodes, d => d.cited_by || 1);
+        var minScore = Math.min(...graph.nodes.map(n => n.modularity));
+        var maxScore = Math.max(...graph.nodes.map(n => n.modularity));
 
-        var nodeSize = d3.scaleLinear()
-          .domain([minCited, maxCited])
-          .range([15, 40]); // Bigger node sizes
+        var color = d3.scaleLinear()
+          .domain([minScore, maxScore]) // Corrected scale usage
+          .range(["lime", "deepskyblue"]);
 
-        var color = d3.scaleOrdinal(d3.schemeCategory10);
-
+        // Create SVG container with responsive design
         var svg = d3.select("body").append("svg")
           .attr("width", w)
           .attr("height", h)
@@ -43,8 +44,8 @@
           .attr("preserveAspectRatio", "xMidYMid meet");
 
         var simulation = d3.forceSimulation(graph.nodes)
-          .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200)) // Increase spacing
-          .force("charge", d3.forceManyBody().strength(-600)) // Stronger repulsion
+          .force("link", d3.forceLink(graph.links).id(d => d.id).distance(100))
+          .force("charge", d3.forceManyBody().strength(-500))
           .force("center", d3.forceCenter(w / 2, h / 2));
 
         var link = svg.selectAll(".link")
@@ -52,13 +53,13 @@
           .enter().append("line")
           .attr("class", "link")
           .style("stroke", "#888")
-          .style("stroke-width", 2);
+          .style("stroke-width", 1.5);
 
         var node = svg.selectAll(".node")
           .data(graph.nodes)
           .enter().append("circle")
-          .attr("r", d => nodeSize(d.cited_by || 1)) // Larger nodes
-          .attr("fill", d => color(d.id))
+          .attr("r", 16)
+          .attr("fill", d => color(d.modularity || 0))
           .call(d3.drag()
             .on("start", dragstarted)
             .on("drag", dragged)
@@ -67,23 +68,22 @@
         var text = svg.selectAll(".text")
           .data(graph.nodes)
           .enter().append("text")
-          .attr("dx", d => nodeSize(d.cited_by || 1) + 8) // Move text further from nodes
+          .attr("dx", 12)
           .attr("dy", ".35em")
-          .style("font-size", "12px")
-          .text(d => d.label)
-          .style("fill", "#333");
+          .style("font-size", "10px")
+          .text(d => d.label);
 
-        simulation.on("tick", function () {
+        simulation.on("tick", function() {
           link.attr("x1", d => d.source.x)
-            .attr("y1", d => d.source.y)
-            .attr("x2", d => d.target.x)
-            .attr("y2", d => d.target.y);
+              .attr("y1", d => d.source.y)
+              .attr("x2", d => d.target.x)
+              .attr("y2", d => d.target.y);
 
           node.attr("cx", d => d.x)
-            .attr("cy", d => d.y);
+              .attr("cy", d => d.y);
 
           text.attr("x", d => d.x)
-            .attr("y", d => d.y);
+              .attr("y", d => d.y);
         });
 
         function dragstarted(event, d) {
@@ -106,3 +106,5 @@
     </script>
   </body>
 </html>
+
+
