--- a/index.html
+++ b/index.html
@@ -11,10 +11,32 @@
         }
         text {
             pointer-events: none;
+            font-size: 12px;
+            font-weight: bold;
+            fill: black;
         }
-        svg {
-            width: 100%;
-            height: 100vh;
+        .node {
+            stroke: #fff;
+            stroke-width: 1.5px;
+        }
+        .link {
+            stroke: #aaa;
+            stroke-opacity: 0.6;
+            stroke-width: 1px;
+        }
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            width: auto;
+            height: auto;
+            padding: 5px;
+            font: 14px sans-serif;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            border-radius: 5px;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.3s;
         }
     </style>
 </head>
@@ -22,17 +44,11 @@
 <body>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
-        // Correct GitHub Raw URL to fetch graph.json
         const jsonURL = "https://raw.githubusercontent.com/Codekarish/CitationsPeerNetwork/master/graph.json";
 
         function loadGraph() {
             fetch(jsonURL)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! Status: ${response.status}`);
-                    }
-                    return response.json();
-                })
+                .then(response => response.json())
                 .then(graph => initializeGraph(graph))
                 .catch(error => console.log("Error loading graph data:", error));
         }
@@ -40,45 +56,73 @@
         function initializeGraph(graph) {
             d3.select("svg").remove(); // Remove previous graph before reloading
 
-            var width = window.innerWidth, height = window.innerHeight;
+            const width = window.innerWidth;
+            const height = window.innerHeight;
 
-            var colorScale = d3.scaleOrdinal(d3.schemeCategory10);
-
-            var svg = d3.select("body").append("svg")
+            const svg = d3.select("body").append("svg")
                 .attr("width", width)
-                .attr("height", height);
+                .attr("height", height)
+                .call(d3.zoom().on("zoom", function(event) {
+                    g.attr("transform", event.transform);
+                }))
+                .append("g");
 
-            var simulation = d3.forceSimulation(graph.nodes)
-                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(100))
-                .force("charge", d3.forceManyBody().strength(-200))
+            const linkForce = d3.forceLink(graph.links)
+                .id(d => d.id)
+                .distance(120) // Increase distance to avoid overlaps
+                .strength(0.5);
+
+            const simulation = d3.forceSimulation(graph.nodes)
+                .force("link", linkForce)
+                .force("charge", d3.forceManyBody().strength(-150)) // Adjust repulsion to spread nodes out
                 .force("center", d3.forceCenter(width / 2, height / 2));
 
-            var link = svg.selectAll(".link")
+            // Define color scale
+            const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
+
+            // Draw links (edges)
+            const link = svg.selectAll(".link")
                 .data(graph.links)
                 .enter().append("line")
-                .attr("class", "link")
-                .style("stroke", "#888")
-                .style("stroke-width", 1.5);
+                .attr("class", "link");
 
-            var node = svg.selectAll(".node")
+            // Draw nodes (circles)
+            const node = svg.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", 8)
+                .attr("r", 10)  // Increase node size for better visibility
                 .attr("fill", d => colorScale(d.modularity || 0))
+                .attr("class", "node")
                 .call(d3.drag()
                     .on("start", dragStarted)
                     .on("drag", dragged)
                     .on("end", dragEnded));
 
-            var text = svg.selectAll(".text")
+            // Add labels (titles)
+            const label = svg.selectAll(".label")
                 .data(graph.nodes)
                 .enter().append("text")
+                .attr("class", "label")
                 .attr("dx", 12)
                 .attr("dy", ".35em")
+                .text(d => d.label)
                 .style("font-size", "10px")
-                .text(d => d.label);
+                .style("fill", "black");
 
-            simulation.on("tick", function () {
+            // Add tooltip
+            const tooltip = d3.select("body").append("div")
+                .attr("class", "tooltip");
+
+            node.on("mouseover", function(event, d) {
+                tooltip.style("opacity", 1)
+                    .html(`<strong>${d.label}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
+                    .style("left", (event.pageX + 10) + "px")
+                    .style("top", (event.pageY - 10) + "px");
+            }).on("mouseout", function() {
+                tooltip.style("opacity", 0);
+            });
+
+            simulation.on("tick", () => {
                 link.attr("x1", d => d.source.x)
                     .attr("y1", d => d.source.y)
                     .attr("x2", d => d.target.x)
@@ -87,7 +131,7 @@
                 node.attr("cx", d => d.x)
                     .attr("cy", d => d.y);
 
-                text.attr("x", d => d.x)
+                label.attr("x", d => d.x)
                     .attr("y", d => d.y);
             });
 
@@ -112,8 +156,6 @@
         // Reload the graph when the page loads
         loadGraph();
 
-        // Refresh every 10 seconds to check for new updates
-        setInterval(loadGraph, 10000);
     </script>
 </body>
 </html>
