--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
             margin: 0;
             font-family: sans-serif;
         }
-        text {
-            pointer-events: none;
-            font-size: 12px;
-            font-weight: bold;
-            fill: black;
-        }
         .node {
             stroke: #fff;
             stroke-width: 1.5px;
@@ -24,6 +18,12 @@
             stroke: #aaa;
             stroke-opacity: 0.6;
             stroke-width: 1px;
+        }
+        text {
+            pointer-events: none;
+            font-size: 12px;
+            font-weight: bold;
+            fill: black;
         }
         .tooltip {
             position: absolute;
@@ -52,7 +52,6 @@
 </head>
 
 <body>
-    <!-- Category Filter Dropdown -->
     <div id="controls">
         <label for="categoryFilter">Filter by Category:</label>
         <select id="categoryFilter">
@@ -72,10 +71,11 @@
         }
 
         function initializeGraph(graph) {
-            d3.select("svg").remove(); // Remove previous graph before reloading
+            d3.select("svg").remove();
 
             const width = window.innerWidth;
             const height = window.innerHeight;
+            const radius = Math.min(width, height) / 2 - 50; // Used for radial layout
 
             const svg = d3.select("body").append("svg")
                 .attr("width", width)
@@ -87,13 +87,20 @@
 
             const linkForce = d3.forceLink(graph.links)
                 .id(d => d.id)
-                .distance(100)
+                .distance(150) // Increased distance
                 .strength(0.5);
 
             const simulation = d3.forceSimulation(graph.nodes)
                 .force("link", linkForce)
-                .force("charge", d3.forceManyBody().strength(-120))
+                .force("charge", d3.forceManyBody().strength(-300)) // More repulsion
+                .force("collision", d3.forceCollide().radius(15)) // Avoids node overlap
                 .force("center", d3.forceCenter(width / 2, height / 2));
+
+            // Apply radial layout to position nodes
+            graph.nodes.forEach((d, i) => {
+                d.x = radius * Math.cos((2 * Math.PI * i) / graph.nodes.length) + width / 2;
+                d.y = radius * Math.sin((2 * Math.PI * i) / graph.nodes.length) + height / 2;
+            });
 
             // Define color scale
             const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
@@ -107,13 +114,11 @@
                     .text(`Category ${category}`);
             });
 
-            // Draw links (edges)
             const link = svg.selectAll(".link")
                 .data(graph.links)
                 .enter().append("line")
                 .attr("class", "link");
 
-            // Draw nodes (circles)
             const node = svg.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
@@ -126,7 +131,6 @@
                     .on("drag", dragged)
                     .on("end", dragEnded));
 
-            // Add labels (Initially Hidden)
             const label = svg.selectAll(".label")
                 .data(graph.nodes)
                 .enter().append("text")
@@ -136,32 +140,53 @@
                 .text(d => d.label)
                 .style("font-size", "10px")
                 .style("fill", "black")
-                .style("visibility", "hidden"); // Hide initially
+                .style("visibility", "hidden");
 
-            // Add tooltip
             const tooltip = d3.select("body").append("div")
                 .attr("class", "tooltip");
 
-            // Hover Effects: Show Tooltip and Label
             node.on("mouseover", function(event, d) {
                 tooltip.style("opacity", 1)
                     .html(`<strong>${d.label}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
                     .style("left", (event.pageX + 10) + "px")
                     .style("top", (event.pageY - 10) + "px");
-                d3.select(this).attr("r", 12); // Highlight node
-                label.filter(l => l.id === d.id).style("visibility", "visible"); // Show label
+                d3.select(this).attr("r", 12);
+                label.filter(l => l.id === d.id).style("visibility", "visible");
             }).on("mouseout", function() {
                 tooltip.style("opacity", 0);
-                d3.select(this).attr("r", 8); // Reset node size
-                label.style("visibility", "hidden"); // Hide labels again
+                d3.select(this).attr("r", 8);
+                label.style("visibility", "hidden");
             });
 
-            // Filtering Functionality
             categoryFilter.on("change", function() {
                 const selectedCategory = this.value;
                 node.style("visibility", d => selectedCategory === "all" || d.modularity == selectedCategory ? "visible" : "hidden");
                 link.style("visibility", d => selectedCategory === "all" || d.source.modularity == selectedCategory || d.target.modularity == selectedCategory ? "visible" : "hidden");
             });
+
+            node.on("click", function(event, d) {
+                const connectedNodes = graph.links
+                    .filter(link => link.source.id === d.id || link.target.id === d.id)
+                    .map(link => link.source.id === d.id ? link.target.id : link.source.id);
+
+                svg.selectAll(".node")
+                    .filter(n => connectedNodes.includes(n.id))
+                    .transition().style("visibility", "visible");
+
+                svg.selectAll(".link")
+                    .filter(l => l.source.id === d.id || l.target.id === d.id)
+                    .transition().style("visibility", "visible");
+            });
+
+            const zoomHandler = d3.zoom()
+                .scaleExtent([1, 5])
+                .on("zoom", function(event) {
+                    g.attr("transform", event.transform);
+                    const zoomLevel = event.transform.k;
+                    svg.selectAll(".label").style("visibility", zoomLevel > 2 ? "visible" : "hidden");
+                });
+
+            svg.call(zoomHandler);
 
             simulation.on("tick", () => {
                 link.attr("x1", d => d.source.x)
@@ -194,9 +219,7 @@
             }
         }
 
-        // Reload the graph when the page loads
         loadGraph();
-
     </script>
 </body>
 </html>
